<resources>
    <string name="app_name">fitnessHub</string>
    <string name="email">Email</string>
    <string name="login_to">Login to</string>
    <string name="fitness_hub">Fitness Hub</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="need_an_account_sign_up">Need an account? Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>